[gd_scene load_steps=12 format=3 uid="uid://bttg11mdsa0oq"]

[ext_resource type="Script" path="res://MovingEnemy.gd" id="1_nvp4w"]
[ext_resource type="Texture2D" uid="uid://cql3skiynp3e3" path="res://enemies/enemy melee beam.png" id="2_re0wx"]
[ext_resource type="Texture2D" uid="uid://bxa8osgldytg" path="res://enemies/moving enemy.png" id="2_vkq5c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0354n"]
size = Vector2(32, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3bs8"]
size = Vector2(640, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vumd"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lkaki"]
size = Vector2(64, 8)

[sub_resource type="Animation" id="Animation_tejkr"]
resource_name = "attack"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Weapon Damage/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.5708, 4.71239, 4.71239, -1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_3uit7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Weapon Damage/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hs8ek"]
resource_name = "attack_left"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Weapon Damage/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.5708, -7.85398, -7.85398, -1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_act8k"]
_data = {
"RESET": SubResource("Animation_3uit7"),
"attack": SubResource("Animation_tejkr"),
"attack_left": SubResource("Animation_hs8ek")
}

[node name="MovingEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 128
collision_mask = 463
script = ExtResource("1_nvp4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0354n")

[node name="Detection Range" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Range"]
shape = SubResource("RectangleShape2D_b3bs8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vkq5c")

[node name="Attack Range" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Range"]
shape = SubResource("RectangleShape2D_2vumd")

[node name="Weapon" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("2_re0wx")
centered = false
offset = Vector2(0, -4)

[node name="Weapon Damage" type="Area2D" parent="Weapon"]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/Weapon Damage"]
position = Vector2(32, -3.8147e-06)
shape = SubResource("RectangleShape2D_lkaki")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_act8k")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 65

[connection signal="body_entered" from="Detection Range" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Detection Range" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Attack Range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Attack Range" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="Weapon/Weapon Damage" to="." method="_on_weapon_damage_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
